[gd_scene load_steps=7 format=3 uid="uid://card001"]

[ext_resource type="Script" path="res://scripts/cards/card.gd" id="1_card"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_glow"]
bg_color = Color(1, 0.5, 0.5, 0.3)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
expand_margin_left = 8.0
expand_margin_top = 8.0
expand_margin_right = 8.0
expand_margin_bottom = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0.12, 0.1, 0.18, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_border"]
bg_color = Color(0, 0, 0, 0)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.85, 0.25, 0.25, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cost"]
bg_color = Color(0.85, 0.25, 0.25, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_upgrade"]
bg_color = Color(0.2, 0.75, 0.4, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="Card" type="Control"]
custom_minimum_size = Vector2(130, 175)
offset_right = 130.0
offset_bottom = 175.0
pivot_offset = Vector2(65, 87.5)
mouse_filter = 0
script = ExtResource("1_card")

[node name="Glow" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_glow")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bg")

[node name="CardBorder" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_border")

[node name="Content" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 30.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 4

[node name="NameLabel" type="Label" parent="Content"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_color = Color(1, 0.95, 0.85, 1)
theme_override_font_sizes/font_size = 16
text = "Card Name"
horizontal_alignment = 1

[node name="TypeLabel" type="Label" parent="Content"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_color = Color(0.85, 0.25, 0.25, 1)
theme_override_font_sizes/font_size = 11
text = "ATTACK"
horizontal_alignment = 1

[node name="Separator" type="HSeparator" parent="Content"]
modulate = Color(0.4, 0.35, 0.5, 1)
layout_mode = 2
mouse_filter = 2

[node name="DescriptionLabel" type="Label" parent="Content"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_colors/font_color = Color(0.85, 0.82, 0.9, 1)
theme_override_font_sizes/font_size = 13
text = "Deal 6 damage."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="CostCircle" type="Panel" parent="."]
layout_mode = 1
offset_left = -8.0
offset_top = -8.0
offset_right = 30.0
offset_bottom = 30.0
pivot_offset = Vector2(19, 19)
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cost")

[node name="CostLabel" type="Label" parent="CostCircle"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpgradeBadge" type="Panel" parent="."]
visible = false
layout_mode = 1
offset_left = 105.0
offset_top = -6.0
offset_right = 135.0
offset_bottom = 24.0
pivot_offset = Vector2(15, 15)
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_upgrade")

[node name="UpgradeLabel" type="Label" parent="UpgradeBadge"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "+"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
